--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -3,18 +3,43 @@
 
 {%block content %}
 
-<div class = "col-md-6 offset-md-3">
 
 {% if user.is_authenticated %}
-<h1> Welcome {{user.username}} </h1>
+<div class = "col-md-7 offset-md-3">
+<h1> Records...   <span class = "offset-md-7"><a href="{% url 'add_record' %}" class="btn btn-secondary" role="button" aria-disabled="true">Add Record</a></span></h1>
+
+<table class="table table-striped table-hover table-bordered">
+  <thead class = " table-dark">
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Created At</th>
+    </tr>
+  </thead>
+  <tbody class = table-group-divider>
+
+{%if records %}
+  {% for record in records %}
+    <tr>
+      <td><a href = "{% url 'record' pk=record.id %}">{{record.first_name}} {{record.last_name}}</a></td>
+      <td>{{record.email}}</td>
+      <td>{{record.phone}}</td>
+      <td>{{record.created_at}}</td>
+    </tr>
+  {%endfor%}
+  </tbody>
+</table>
+
+{%endif%}
+</div>
 {% else %}
 
-
+<div class= "col-md-6 offset-md-3">
 <h1>Login</h1>
 <br>
 <form method = "POST" action = "{% url 'home' %}" > 
     {% csrf_token %}
-    <form>
         <div class="mb-3">
 
           <input type="text" class="form-control" name= "username" , placeholder = "username" required>
